--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout1"
-        android:layout_width="182dp"
+        android:layout_width="149dp"
         android:layout_height="227dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -125,33 +125,20 @@
         app:layout_constraintTop_toBottomOf="@+id/layout_joystick" />
 
     <TextView
-        android:id="@+id/health"
-        android:layout_width="105dp"
-        android:layout_height="37dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/layout_joystick"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.444"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout1"
-        app:layout_constraintTop_toBottomOf="@+id/name"
-        app:layout_constraintVertical_bias="0.27" />
-
-    <TextView
-        android:id="@+id/points"
-        android:layout_width="105dp"
-        android:layout_height="32dp"
+        android:id="@+id/HPTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="---"
+        android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/layout_joystick"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toEndOf="@+id/linearLayout1"
-        app:layout_constraintTop_toBottomOf="@+id/health" />
+        app:layout_constraintTop_toBottomOf="@+id/name"
+        app:layout_constraintVertical_bias="0.278" />
 
 </android.support.constraint.ConstraintLayout>
